--- a/app/src/main/res/layout/activity_authorized_operation.xml
+++ b/app/src/main/res/layout/activity_authorized_operation.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/ToolBarTheme"
+            app:title="@string/Authorized_operation"
             app:layout_constraintTop_toTopOf="parent"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
 
