--- a/app/src/main/res/layout/activity_motion_layout.xml
+++ b/app/src/main/res/layout/activity_motion_layout.xml
@@ -15,13 +15,11 @@
         app:showPaths="true"
         tools:context=".ui.activity.MotionLayoutActivity">
 
+    <View
+        android:id="@+id/button"
+        android:layout_width="64dp"
+        android:layout_height="64dp"/>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:contentDescription="@string/PagingComponents" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
