--- a/app/src/main/res/layout/item_file_hoem_root.xml
+++ b/app/src/main/res/layout/item_file_hoem_root.xml
@@ -10,58 +10,39 @@
 
         <variable
             name="item"
-            type="com.sq26.experience.ui.activity.file.FileRoot" />
+            type="com.sq26.experience.data.FileRoot" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="@{onClick}"
+        android:orientation="vertical"
         android:padding="8dp">
 
         <TextView
-            android:id="@+id/name"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{item.name}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="@{item.name}" />
 
         <TextView
-            android:id="@+id/rom"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{item.rom}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/name" />
+            android:text="@{item.rom}" />
 
         <TextView
-            android:id="@+id/path"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{item.uri}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rom" />
+            android:text="@{item.uri}" />
 
         <TextView
-            android:id="@+id/canRead"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{String.valueOf(item.canRead) }"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/path" />
+            android:text="@{String.valueOf(item.canRead) }" />
 
         <TextView
-            android:id="@+id/canWrite"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{String.valueOf(item.canWrite)}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/canRead" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="@{String.valueOf(item.canWrite)}"/>
+    </LinearLayout>
 </layout>
