--- a/app/src/main/res/xml/scene_01.xml
+++ b/app/src/main/res/xml/scene_01.xml
@@ -3,45 +3,57 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <Transition
         android:id="@+id/t1"
-        app:constraintSetStart="@id/start"
         app:constraintSetEnd="@id/end"
+        app:constraintSetStart="@id/start"
         app:duration="1000">
 
         <OnSwipe
+            app:dragDirection="dragRight"
             app:touchAnchorId="@+id/button"
-            app:touchAnchorSide="right"
-            app:dragDirection="dragRight"/>
-
-        <OnClick
-            app:targetId="@+id/left"
-            app:clickAction="transitionToStart" />
+            app:touchAnchorSide="right" />
 
         <KeyFrameSet>
-            <KeyPosition
+            <!--            <KeyPosition-->
+            <!--                app:motionTarget="@id/button"-->
+            <!--                app:keyPositionType="pathRelative"-->
+            <!--                app:percentY="-0.25"-->
+            <!--                app:framePosition="50"-->
+            <!--                />-->
+
+            <!--            <KeyAttribute-->
+            <!--                android:rotation="-45"-->
+            <!--                android:scaleX="2"-->
+            <!--                android:scaleY="2"-->
+            <!--                android:alpha="0"-->
+            <!--                app:framePosition="50"-->
+            <!--                app:motionTarget="@id/button" />-->
+
+            <KeyCycle
+                android:translationY="50dp"
+                app:framePosition="100"
                 app:motionTarget="@id/button"
-                app:keyPositionType="pathRelative"
-                app:percentY="-0.25"
-                app:percentX="0.5"
+                app:waveOffset="0"
+                app:wavePeriod="0"
+                app:waveShape="sin" />
+
+            <KeyCycle
+                android:translationY="50dp"
                 app:framePosition="50"
-                />
-            <KeyAttribute
                 app:motionTarget="@id/button"
-                app:framePosition="50"
-                android:alpha="0"/>
+                app:waveOffset="0"
+                app:wavePeriod="3"
+                app:waveShape="sin" />
+            <KeyCycle
+                android:translationY="50dp"
+                app:framePosition="0"
+                app:motionTarget="@id/button"
+                app:waveOffset="0"
+                app:wavePeriod="0"
+                app:waveShape="sin" />
+
         </KeyFrameSet>
     </Transition>
 
-    <Transition
-        app:constraintSetStart="@id/start"
-        app:constraintSetEnd="@id/end"
-        app:duration="1000">
-
-        <OnClick
-            app:targetId="@+id/right"
-            app:clickAction="transitionToEnd" />
-
-
-    </Transition>
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
@@ -51,10 +63,10 @@
             android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
+            app:layout_constraintTop_toTopOf="parent">
             <CustomAttribute
                 app:attributeName="backgroundColor"
-                app:customColorValue="@color/colorPrimary"/>
+                app:customColorValue="@color/colorPrimary" />
         </Constraint>
     </ConstraintSet>
     <ConstraintSet android:id="@+id/end">
@@ -65,10 +77,10 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
+            app:layout_constraintTop_toTopOf="parent">
             <CustomAttribute
                 app:attributeName="backgroundColor"
-                app:customColorValue="@color/colorAccent"/>
+                app:customColorValue="@color/colorAccent" />
         </Constraint>
     </ConstraintSet>
 </MotionScene>
